Sorts up the showcase area and about area

--- a/index.html
+++ b/index.html
@@ -55,28 +55,54 @@
     
     <section id="about">
         <div class="container">
-            <img id="about-pic" src="./img/about.jpg" alt="">
-            <p>Bacon ipsum dolor amet biltong beef ribs 
-                ham swine pork landjaeger strip steak pig venison 
-                meatloaf andouille. Burgdoggen corned beef filet mignon 
-                ham jowl sausage tail ham hock rump pork. Shankle swine t-bone 
-                capicola tri-tip sausage ribeye. Shank kevin bresaola ribeye corned 
-                beef frankfurter brisket venison pancetta tri-tip. Brisket jowl drumstick, 
-                jerky t-bone ball tip bacon picanha sausage cupim. Ham hock 
-                cow turducken, strip steak pork tri-tip fatback t-bone filet mignon.
-            </p>
-        </div>
+            <div class="about-container">
+                <div id="about-pic">
+                    <img src="./img/about.jpg" alt="">
+                </div>
+                <div id="about-descripton">   
+                    <p>Bacon ipsum dolor amet biltong beef ribs 
+                        ham swine pork landjaeger strip steak pig venison 
+                        meatloaf andouille. Burgdoggen corned beef filet mignon 
+                        ham jowl sausage tail ham hock rump pork. Shankle swine t-bone 
+                        capicola tri-tip sausage ribeye. Shank kevin bresaola ribeye corned 
+                        beef frankfurter brisket venison pancetta tri-tip. Brisket jowl drumstick, 
+                        jerky t-bone ball tip bacon picanha sausage cupim. Ham hock 
+                        cow turducken, strip steak pork tri-tip fatback t-bone filet mignon.
+                    </p>
+                    <p>Bacon ipsum dolor amet biltong beef ribs 
+                        ham swine pork landjaeger strip steak pig venison 
+                        meatloaf andouille. Burgdoggen corned beef filet mignon 
+                        ham jowl sausage tail ham hock rump pork. Shankle swine t-bone 
+                        capicola tri-tip sausage ribeye. Shank kevin bresaola ribeye corned 
+                        beef frankfurter brisket venison pancetta tri-tip. Brisket jowl drumstick, 
+                        jerky t-bone ball tip bacon picanha sausage cupim. Ham hock 
+                        cow turducken, strip steak pork tri-tip fatback t-bone filet mignon.
+                    </p>
+                    <p>Bacon ipsum dolor amet biltong beef ribs 
+                        ham swine pork landjaeger strip steak pig venison 
+                        meatloaf andouille. Burgdoggen corned beef filet mignon 
+                        ham jowl sausage tail ham hock rump pork. Shankle swine t-bone 
+                        capicola tri-tip sausage ribeye. Shank kevin bresaola ribeye corned 
+                        beef frankfurter brisket venison pancetta tri-tip. Brisket jowl drumstick, 
+                        jerky t-bone ball tip bacon picanha sausage cupim. Ham hock 
+                        cow turducken, strip steak pork tri-tip fatback t-bone filet mignon.
+                    </p>
+                </div>
+            </div> <!-- about-container -->
+        </div> <!-- container -->
     </section>
 
     <section id="boxes">
-        <div class="box">
-            <img src="./img/css.3.svg.png" alt="">
-        </div>
-        <div class="box">
-            <img src="./img/HTML5_Logo.svg" alt="">
-        </div>
-        <div class="box">
-            <img src="./img/HTML5_Logo.svg" alt="">
+        <div class="box-row">
+            <div class="box">
+                <img src="./img/css.3.svg.png" alt="">
+            </div>
+            <div class="box">
+                <img src="./img/HTML5_Logo.svg" alt="">
+            </div>
+            <div class="box">
+                <img src="./img/HTML5_Logo.svg" alt="">
+            </div>
         </div>
     </section>
 
