Sorts up the about section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
     </section>
     
 
-    <section id="about">
+    <section class="container">
+        <div class="row">
+            <figure class="col-sm-6">
+                <img src="./img/about.jpg" alt="">
+            </figure>
+            <div class="col-sm-6 text-left">
+                <h2>About me</h2>
+                <p>Bacon ipsum dolor amet burgdoggen capicola jerky picanha, alcatra ham tenderloin jowl brisket short ribs fatback meatball doner spare ribs. Swine beef ribs pastrami, fatback landjaeger t-bone pig chicken cow. Biltong hamburger pork loin, porchetta ground round brisket jerky venison beef ribs. Pork belly picanha hamburger drumstick cupim, short loin boudin meatloaf beef pancetta chicken. Meatball salami cow, pork chop short loin tongue jowl ground round frankfurter filet mignon pancetta shankle andouille. Biltong shoulder capicola, pork chop leberkas tenderloin tri-tip rump brisket short loin bacon sirloin fatback drumstick.</p>
+            </div>
+        </div>
        
     </section>
 
