--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
     <header class="container">
         <div class="row">
-            <div class="col-sm-1">
+            <div class="col-sm-1" "col-xs-2">
                 <i class="fa fa-user" aria-hidden="true"></i>
             </div>
-            <nav class="col-sm-10 text-center">
+            <nav class="col-sm-10 col-xs-10 text-center">
                 <p>About</p>
                 <p>Abilites</p>
                 <p>Goals</p>
                 <p>Projects</p>
                 <p>Contact</p>
             </nav>
-            <div class="col-sm-1">
+            <div class="col-sm-1" "col-xs-2">
                 <i class="fa fa-flag" aria-hidden="true"></i>
             </div>
         </div>
@@ -53,7 +53,23 @@
     </section>
 
     <section id="boxes">
-        <div class="row"></div>
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="./img/html5.png" alt="">
+                <h3>Rubrik</h3>
+                <p>Bacon ipsum dolor amet burgdoggen capicola jerky picanha, alcatra ham tenderloin jowl brisket short ribs</p>
+            </div>
+            <div class="col-sm-4">
+                <img src="./img/bootstrap.png" alt="">
+                <h3>Rubrik</h3>
+                <p>Bacon ipsum dolor amet burgdoggen capicola jerky picanha, alcatra ham tenderloin jowl brisket short ribs</p>
+            </div>
+            <div class="col-sm-4">
+                <img src="./img/css3.png" alt="">
+                <h3>Rubrik</h3>
+                <p>Bacon ipsum dolor amet burgdoggen capicola jerky picanha, alcatra ham tenderloin jowl brisket short ribs</p>
+            </div>
+        </div>
     </section>
 
 
