Makes the navbar, showcase, about, abilites and projects responsive to mobile users

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/fb4feead1b.css">  <!-- FONT AWSOME CSS -->
 
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/mediaq.css">
 </head>
 <body>
 
@@ -30,6 +31,10 @@
                         </ul>
                     </div>
                 
+                    <div class="site-nav-button">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
+
                     <div id="lang">
                         <i class="fa fa-flag" aria-hidden="true"></i>
                     </div>
@@ -95,13 +100,25 @@
     <section id="boxes">
         <div class="box-row">
             <div class="box">
-                <img src="./img/css.3.svg.png" alt="">
+                <img src="./img/css3.png" alt="">
+                <h3>CSS 3</h3>
+                <p>Bacon ipsum dolor amet biltong beef ribs 
+                    ham swine pork landjaeger strip steak pig venison 
+                    meatloaf andouille.</p>
             </div>
             <div class="box">
-                <img src="./img/HTML5_Logo.svg" alt="">
+                <img src="./img/bootstrap.png" alt="">
+                <h3>Bootstrap</h3>
+                <p>Bacon ipsum dolor amet biltong beef ribs 
+                    ham swine pork landjaeger strip steak pig venison 
+                    meatloaf andouille.</p>
             </div>
             <div class="box">
-                <img src="./img/HTML5_Logo.svg" alt="">
+                <img src="./img/html5.png" alt="">
+                <h3>HTML 5</h3>
+                <p>Bacon ipsum dolor amet biltong beef ribs 
+                    ham swine pork landjaeger strip steak pig venison 
+                    meatloaf andouille.</p>
             </div>
         </div>
     </section>
