--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/mediaq.css">
+        <link rel="stylesheet" href="./css/animations.css">
     </head>
     <body>
 
@@ -31,7 +32,7 @@
                             <li><a href="index.html">About me</a></li>
                             <li><a href="index.html">Abilities</a></li>
                             <li><a href="index.html">Projects</a></li>
-                            <li><a href="index.html">Goals</a></li>
+                            <li><a href="index.html">This portfolio</a></li>
                             <li><a href="index.html">Contact</a></li>
                         </ul>
                     </div>
@@ -54,7 +55,7 @@
                     <h2>Swedish Web Developer</h2>
                 </div>
             
-                <div class="scroll-container">
+                <div class="scroll-container bounce">
                     <i class="fa fa-angle-down" aria-hidden="true"></i>
                     <p>Scroll down</p>
                 </div>
