adds animation to scroll down icon

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="contact-contatiner">
                 <div id="contact-mail">
                     <h2>Kontakta mig på min mail</h2>
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                    <a href="mailto:callejover@live.se" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                 </div>
                 <div id="contact-linkedin">
                     <h2>Kontakta mig på Linked In</h2>
@@ -204,6 +204,7 @@
             </div>
         </footer>
 
+        <script src="./js/scroll.js"></script>
         <script src="./js/main.js"></script>
         
     </body>
