Adds custom hamburger for mobile use

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                         </ul>
                     </div>
                 
-                    <div class="site-nav-button">
-                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    <div class="site-nav-button" onclick="navToggle(this)">
+                        <div id="bar1"></div>
+                        <div id="bar2"></div>
+                        <div id="bar3"></div>
                     </div>
 
                     <div id="selections">
